<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Avalon Helper</string>
    <string name="main_copyright_notice">Created by Brian Chau. Not endorsed by Don Eskridge, the creator of The Resistance and Avalon.</string>
    <string name="main_play_button">Start Game</string>
    <string name="main_stats_button">Statistics</string>

    <string name="stats_title">User Statistics</string>
    <string name="stats_delete">Delete</string>
    <string name="stats_wins">Wins</string>
    <string name="stats_losses">Losses</string>
    <string name="stats_streak">Streak</string>

    <string name="number_of_players_select">How many players are there?</string>
    <string name="number_of_players_five">5</string>
    <string name="number_of_players_six">6</string>
    <string name="number_of_players_seven">7</string>
    <string name="number_of_players_eight">8</string>
    <string name="number_of_players_nine">9</string>
    <string name="number_of_players_ten">10</string>

    <string name="select_users_new">New User</string>
    <string name="select_users_ok">OK</string>

    <string name="select_cards_ok">OK</string>
    <string name="select_cards_info">Information</string>

    <string name="new_user_dialog_prompt">New username:</string>
    <string name="new_user_dialog_ok">OK</string>
    <string name="new_user_dialog_cancel">Cancel</string>

    <string name="delete_user_dialog_prompt">Delete %s?</string>
    <string name="delete_user_dialog_ok">OK</string>
    <string name="delete_user_dialog_cancel">Cancel</string>

    <string name="deal_cards_pass_to">Pass the device to:</string>
    <string name="deal_cards_ok">OK</string>
    <string name="deal_cards_you_are">You are:</string>

    <string name="game_vote_reject">Votes Rejected</string>
    <string name="game_mission_pass">Mission Passed</string>
    <string name="game_mission_fail">Mission Failed</string>
    <string name="game_two_fail_mission">This is a two-fail mission.</string>

    <string name="game_mission_1">1</string>
    <string name="game_mission_2">2</string>
    <string name="game_mission_3">3</string>
    <string name="game_mission_4">4</string>
    <string name="game_mission_5">5</string>

    <string name="game_mission_result_passed">Passed</string>
    <string name="game_mission_result_failed">Failed</string>
    <string name="game_mission_select">Select %d players for this mission</string>
    <string name="game_mission_players">%d player mission</string>
    <string name="game_mission_rejects">%d rejects</string>

    <string name="merlin_guess_who">Who is Merlin?</string>

    <string name="end_game_merlin_guess_correct">Merlin was correctly guessed</string>
    <string name="end_game_merlin_guess_incorrect">Merlin was not correctly guessed</string>
    <string name="end_game_good">The winners are the Loyal Servants of Arthur</string>
    <string name="end_game_evil">The winners are the Minions of Mordred</string>
    <string name="end_game_ok">OK</string>

    <string name="lancelot_switch_dialog_info">Good and Evil Lancelots, you have now switched roles.</string>
    <string name="lancelot_switch_dialog_ok">OK</string>

</resources>
