<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="165dp"
    android:background="#333333">

    <TextView
        android:layout_width="280dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:text="@string/new_user_dialog_prompt" />

    <TextView
        android:id="@+id/tv_new_user_warning"
        android:layout_width="280dp"
        android:layout_height="20dp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ff3333" />

    <EditText
        android:id="@+id/et_new_username"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="65dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:singleLine="true"
        android:background="#555555"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp">

        <Button
            android:id="@+id/btn_new_user_cancel"
            android:layout_width="125dp"
            android:layout_height="30dp"
            android:background="#cccccc"
            android:text="@string/new_user_dialog_cancel" />

        <Button
            android:id="@+id/btn_new_user_ok"
            android:layout_width="125dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:background="#cccccc"
            android:text="@string/new_user_dialog_ok"/>

    </LinearLayout>


</RelativeLayout>