<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_stats_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#857d71">

    <LinearLayout
        android:id="@+id/ll_deal_show_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:padding="30dp"
            android:gravity="center"
            android:text="@string/deal_cards_pass_to" />

        <TextView
            android:id="@+id/tv_deal_pass_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:padding="30dp"
            android:gravity="center" />

        <Button
            android:id="@+id/btn_deal_pass_ok"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:text="@string/deal_cards_ok" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_deal_show_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_deal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center"
            android:text="@string/deal_cards_you_are" />

        <TextView
            android:id="@+id/tv_deal_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:padding="30dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_deal_other_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="30dp"
            android:gravity="center" />

        <Button
            android:id="@+id/btn_deal_info_ok"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:text="@string/deal_cards_ok" />

    </LinearLayout>

</RelativeLayout>