<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_setup_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#857d71">

    <FrameLayout
        android:id="@+id/fl_setup_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/rl_number_of_players_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#857d71"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_number_of_players_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:text="@string/number_of_players_select" />

            <RelativeLayout
                android:id="@+id/rl_number_of_players_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tv_number_of_players_text"
                android:layout_marginTop="25dp">

                <Button
                    android:id="@+id/btn_number_of_players_five"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:textSize="48sp"
                    android:text="@string/number_of_players_five" />

                <Button
                    android:id="@+id/btn_number_of_players_six"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="25dp"
                    android:layout_toRightOf="@id/btn_number_of_players_five"
                    android:textSize="48sp"
                    android:text="@string/number_of_players_six" />

                <Button
                    android:id="@+id/btn_number_of_players_seven"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="25dp"
                    android:layout_below="@id/btn_number_of_players_five"
                    android:textSize="48sp"
                    android:text="@string/number_of_players_seven" />

                <Button
                    android:id="@+id/btn_number_of_players_eight"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_toRightOf="@id/btn_number_of_players_five"
                    android:layout_below="@id/btn_number_of_players_five"
                    android:textSize="48sp"
                    android:text="@string/number_of_players_eight" />

                <Button
                    android:id="@+id/btn_number_of_players_nine"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="25dp"
                    android:layout_below="@id/btn_number_of_players_seven"
                    android:textSize="48sp"
                    android:text="@string/number_of_players_nine" />

                <Button
                    android:id="@+id/btn_number_of_players_ten"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_toRightOf="@id/btn_number_of_players_seven"
                    android:layout_below="@id/btn_number_of_players_seven"
                    android:textSize="48sp"
                    android:text="@string/number_of_players_ten" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_select_users_fragment"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#857d71"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_select_users_new"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/select_users_new" />

            <ListView
                android:id="@+id/lv_select_users_all"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/btn_select_users_new">

            </ListView>

            <Button
                android:id="@+id/btn_select_users_ok"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:text="@string/select_users_ok" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_select_cards_fragment"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#857d71"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/ll_card_selections"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_card_selected_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0033ff"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/tv_card_selected_evil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:textColor="#ff0000"
                    android:textSize="32sp" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_card_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_card_selections"
                android:layout_centerHorizontal="true">

                <ToggleButton
                    android:id="@+id/btn_card_merlin"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:textColor="#0033ff"
                    android:textSize="22sp"
                    android:textOff="Merlin"
                    android:textOn="Merlin" />

                <ToggleButton
                    android:id="@+id/btn_card_percival"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_toRightOf="@id/btn_card_merlin"
                    android:textColor="#0033ff"
                    android:textSize="18sp"
                    android:textOff="Percival"
                    android:textOn="Percival"/>

                <ToggleButton
                    android:id="@+id/btn_card_rick_james"
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:layout_toRightOf="@id/btn_card_percival"
                    android:textColor="#0033ff"
                    android:textSize="24sp"
                    android:textOff="Rick and James"
                    android:textOn="Rick and James" />

                <ToggleButton
                    android:id="@+id/btn_card_lancelot"
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:layout_below="@id/btn_card_merlin"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textOff="Good and Evil Lancelots"
                    android:textOn="Good and Evil Lancelots" />

                <TextView
                    android:id="@+id/tv_card_servant"
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:layout_toRightOf="@id/btn_card_lancelot"
                    android:layout_below="@id/btn_card_merlin"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="#0033ff"
                    android:textSize="18sp" />

                <ToggleButton
                    android:id="@+id/btn_card_jheri"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_below="@id/btn_card_lancelot"
                    android:textColor="#0033ff"
                    android:textSize="24sp"
                    android:textOff="Jheri"
                    android:textOn="Jheri" />

                <ToggleButton
                    android:id="@+id/btn_card_mordred"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_toRightOf="@id/btn_card_jheri"
                    android:layout_below="@id/btn_card_lancelot"
                    android:textColor="#ff0000"
                    android:textSize="16sp"
                    android:textOff="Mordred"
                    android:textOn="Mordred" />

                <ToggleButton
                    android:id="@+id/btn_card_morgana"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_toRightOf="@id/btn_card_mordred"
                    android:layout_below="@id/btn_card_lancelot"
                    android:textColor="#ff0000"
                    android:textSize="16sp"
                    android:textOff="Morgana"
                    android:textOn="Morgana" />

                <ToggleButton
                    android:id="@+id/btn_card_assassin"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_toRightOf="@id/btn_card_morgana"
                    android:layout_below="@id/btn_card_lancelot"
                    android:textColor="#ff0000"
                    android:textSize="15sp"
                    android:textOff="Assassin"
                    android:textOn="Assassin" />

                <ToggleButton
                    android:id="@+id/btn_card_oberon"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_below="@id/btn_card_mordred"
                    android:textColor="#ff0000"
                    android:textSize="18sp"
                    android:textOff="Oberon"
                    android:textOn="Oberon" />

                <ToggleButton
                    android:id="@+id/btn_card_infiltrator"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_toRightOf="@id/btn_card_oberon"
                    android:layout_below="@id/btn_card_mordred"
                    android:textColor="#ff0000"
                    android:textSize="16sp"
                    android:textOff="Infiltrator"
                    android:textOn="Infiltrator" />

                <TextView
                    android:id="@+id/tv_card_minion"
                    android:layout_width="180dp"
                    android:layout_height="100dp"
                    android:layout_toRightOf="@id/btn_card_infiltrator"
                    android:layout_below="@id/btn_card_mordred"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="#ff0000"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_card_buttons"
                android:layout_centerHorizontal="true">

                <Button
                    android:id="@+id/btn_select_cards_info"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:text="@string/select_cards_info" />

                <Button
                    android:id="@+id/btn_select_cards_ok"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_toRightOf="@id/btn_select_cards_info"
                    android:text="@string/select_cards_ok" />

            </RelativeLayout>

        </RelativeLayout>

    </FrameLayout>

</RelativeLayout>